Bug 695941 - mupdf-1.7 ignores width in ePub CSS
Summary: mupdf-1.7 ignores width in ePub CSS
Status: RESOLVED FIXED
Alias: None
Product: MuPDF
Classification: Unclassified
Component: epub (show other bugs)
Version: master
Hardware: Other All
: P4 normal
Assignee: MuPDF bugs
URL:
Keywords:
Depends on:
Blocks: 695935
  Show dependency tree
 
Reported: 2015-04-18 05:30 UTC by Pablo Rodríguez
Modified: 2019-07-18 12:24 UTC (History)
2 users (show)

See Also:
Customer:
Word Size: ---


Attachments
ePub with full width cover image (13.03 KB, application/epub+zip)
2015-04-18 05:30 UTC, Pablo Rodríguez
Details
image comparing mupdf-1.7 vs. ebook-viewer from calibre-2.25 (88.96 KB, image/png)
2015-04-18 05:32 UTC, Pablo Rodríguez
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pablo Rodríguez 2015-04-18 05:30:29 UTC
Created attachment 11601 [details]
ePub with full width cover image

The attached ePub file contains a cover image with the following CSS code:

    #cover-image, #cover-image img {
        width: 100%;
        margin: 0%;
        padding: 0%;
        }

I’m afraid that mupdf-1.7 simply ignores the CSS width property.
Comment 1 Pablo Rodríguez 2015-04-18 05:32:12 UTC
Created attachment 11602 [details]
image comparing mupdf-1.7 vs. ebook-viewer from calibre-2.25

The screenshot shows mupdf on the left and calibre on the right.
Comment 2 Pablo Rodríguez 2016-11-15 10:30:04 UTC
The issue is still present in version 1.10-rc1.
Comment 3 Pablo Rodríguez 2017-11-26 12:02:06 UTC
Issue still present in version 1.12-rc1.
Comment 4 Pablo Rodríguez 2018-09-27 11:05:52 UTC
I’m afraid the issue is still present in version 1.14-rc1.
Comment 5 Carlo B 2019-07-13 09:49:26 UTC
Hi im having the same issue. anyone has the solution already?

Castro B,
https://sparpedia.ch
Comment 6 Tor Andersson 2019-07-18 12:24:17 UTC
commit 343bdd62135d9fd5f9ac2c246d691b770c370375
Author: Tor Andersson <tor.andersson@artifex.com>
Date:   Mon Jul 15 13:26:57 2019 +0200

    Bug 695941: Use CSS width and height attributes to size images.
    
    Prefer img tag width and height attributes if available.