Bug 695941: Use CSS width and height attributes to size images.

Prefer img tag width and height attributes if available.